# mogan

./: .clang-format  .gitignore  .gitmodules  .lldbinit  80_6.tmu  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Claude.md  LiiiSTEM.tm  README.md  README_ZH.md  all-kbd-blocks.scm  configure  gen_doc.sh  pac.lua  package.json  test.tmu  xmake.lua  启动流程分析.md  字体大小浮点支持实施指南.md  字体大小浮点支持技术报告.md  非阻塞引导窗口实施计划.md
TeXmacs/: CMakeLists.txt  plugins
TeXmacs/doc/about/: about-summary.en.tm  about-summary.zh.tm  about.zh.tm  mogan.en.tm  mogan.zh.tm
TeXmacs/doc/configuration/: conf.cyrillicuser.en.tmu  conf.eastuser.en.tmu  conf.eastuser.zh.tmu  conf.keyconfig.en.tmu  conf.keyconfig.zh.tmu  conf.man-configuration.zh.tmu  conf.userpref.en.tmu  conf.userpref.zh.tmu
TeXmacs/doc/main/: Mogan.en.tmu  Mogan.zh.tmu  TeXmacsScheme.en.tmu  TeXmacsSourceCode.en.tmu  man-manual.zh.tmml  man-reference.zh.tm  man-user-manual.zh.tm  planet.en.tmu  planet.zh.tmu  template.en.tmu  template.zh.tmu
TeXmacs/doc/manual/: getting started with texmacs.tmu  manu.TEXMACSstart.en.tmu  manu.custom.en.tmu  manu.custom.zh.tmu  manu.editing.en.tmu  manu.editing.zh.tmu  manu.example-man-session-edit.en.tmu  manu.formulas.en.tmu  manu.formulas.zh.tmu  manu.gettingstarted.en.tmu  manu.gettingstarted.zh.tmu  manu.graphics.zh.tmu  manu.header-title-global.en.tmu  manu.interface-dynlibs.en.tmu  manu.interface.ch.tmu  manu.interface.en.tmu  manu.layout.en.tmu  manu.layout.zh.tmu  manu.man-create-table.zh.tmu  manu.man-hybrid.en.tm  manu.man-hybrid.zh.tmu  manu.man-semantics-symbols.zh.tmu  manu.plugin-binary.en.tmu  manu.plugin.en.tmu  manu.prim-control.en.tmu  manu.prim-macro.en.tmu  manu.section-base-helper.en.tmu  manu.slides.ch.tmu  manu.slides.en.tmu  manu.std-utils-dtd.en.tmu  manu.style-example.en.tmu  manu.style-language.en.tmu  manu.styles.ch.tmu  manu.styles.en.tmu  manu.tables.en.tmu  manu.tables.zh.tmu  manu.texmacsstart.en.tmu  manu.toc.en.tmu  manu.toc.zh.tmu  manu.typing.en.tmu  (+1 more)
TeXmacs/examples/texts/: torture-images.tm
TeXmacs/fonts/: font-characteristics.scm  font-database.scm  font-features.scm  font-substitutions.scm  font_basename.scm  font_cache.scm
TeXmacs/fonts/enc/: adobe-math.enc  alphanum-math.enc  alt-math.enc  capital-math.enc  cmmi.enc  cmr.enc  enr-math.enc  math-bbb-cap.enc  math-bbb.enc  math-cal-star.enc  math-cal.enc  math.enc  var-math.enc
TeXmacs/fonts/virtual/: emu-relations.vfn
TeXmacs/langs/encoding/: corktounicode.scm  herktounicode.scm  tmuniversaltounicode.scm
TeXmacs/misc/images/: images.qrc
TeXmacs/misc/mime/: LiiiSTEM.desktop  MoganResearch.desktop  MoganSTEM.desktop  mogan.desktop  mogan.xml
TeXmacs/misc/themes/: liii-night.css  liii.css  old-dark.css  old-light.css  standard-dark.css  standard-light.css
TeXmacs/plugins/: CMakeLists.txt
TeXmacs/plugins/binary/: README_ZH.md
TeXmacs/plugins/cite/: README.md
TeXmacs/plugins/goldfish/: .gitignore
TeXmacs/plugins/octave/: README.md
TeXmacs/plugins/physics/: README.md
TeXmacs/plugins/shell/: CMakeLists.txt
TeXmacs/progs/: init-beamer.scm  init-code.scm  init-draw.scm  init-research.scm  init-texmacs-s7.scm  init-texmacs.scm  init-tm2html.scm
TeXmacs/progs/bibtex/: bib-utils.scm
TeXmacs/progs/check/: check-master.scm  system-test.scm
TeXmacs/progs/config/: preference-test.scm
TeXmacs/progs/database/: bib-db.scm  db-menu.scm  db-tmfs.scm  db-widgets.scm
TeXmacs/progs/debug/: debug-menu.scm  debug-widgets.scm
TeXmacs/progs/doc/: apidoc-collect.scm  apidoc-funcs.scm  docgrep.scm  help-funcs.scm  help-menu.scm  tmdoc-markup.scm  tmdoc.scm  tmweb.scm
TeXmacs/progs/dynamic/: animate-menu.scm  fold-edit.scm  fold-kbd.scm  fold-menu.scm  program-edit.scm  session-drd.scm  session-edit.scm  session-menu.scm
TeXmacs/progs/education/: edu-edit.scm
TeXmacs/progs/fonts/: font-new-widgets.scm  font-old-menu.scm  fonts-composite.scm  fonts-math.scm  fonts-test.scm  fonts-truetype.scm
TeXmacs/progs/generic/: document-edit.scm  document-menu.scm  document-part.scm  document-style.scm  document-widgets.scm  embedded-edit-test.scm  embedded-edit.scm  format-edit.scm  format-geometry-edit.scm  format-menu.scm  format-tools.scm  format-widgets.scm  generic-doc.scm  generic-edit.scm  generic-kbd.scm  generic-menu.scm  generic-test.scm  insert-menu.scm  paste-widget.scm  pattern-selector.scm  pattern-tools.scm  search-kbd.scm  search-widgets.scm  spell-widgets.scm
TeXmacs/progs/graphics/: graphics-drd.scm  graphics-edit.scm  graphics-env.scm  graphics-group-test.scm  graphics-group.scm  graphics-kbd.scm  graphics-main.scm  graphics-markup.scm  graphics-menu.scm  graphics-object.scm  graphics-single.scm  graphics-utils.scm
TeXmacs/progs/language/: locale.scm  minimal-test.scm  natural.scm  std-symbols.scm
TeXmacs/styles/: beamer.ts
TeXmacs/tests/: 11_28.scm  11_36.scm  11_38.scm  11_4.scm  12_1.bib  12_1.scm  12_4.bib  12_4.tm  15_3_1.scm  15_3_2.scm  15_3_3.scm  15_3_5.scm  15_3_7.scm  17_1.scm  17_1.tm  19_8.scm  201_11.scm  201_15.scm  201_5.scm  201_6.scm  202_53.scm  203_1.scm  203_12.scm  203_16.scm  203_17.scm  203_18.scm  203_19.scm  203_5.scm  203_6.scm  222_22.scm  222_25.scm  222_26.scm  222_34.scm  23_27.scm  24_10.scm  24_11.scm  24_14.scm  24_15.scm  24_19.scm  24_4.scm  (+24 more)
misc/: CMakeLists.txt
misc/admin/: admin.makefile
misc/doxygen/: Doxyfile.in
misc/m4/: tm_version.m4
misc/man/: mogan.1.in
misc/scripts/: mogan.sh.in  texmacs.in
misc/translation/: sort_dict.cpp
misc/xmake/: global.lua  packages.lua
src/: CMakeLists.txt
src/Edit/: editor.hpp
src/Mogan/: app_type.hpp
src/Scheme/: scheme.hpp
src/System/: config.h.cmake  config.h.xmake  config.in  config_l1.h.xmake  config_l2.h.xmake  config_l3.h.xmake  tm_configure.hpp.cmake  tm_configure.hpp.xmake  tm_configure_l1.hpp.xmake  tm_configure_l2.hpp.xmake  tm_configure_l3.hpp.xmake
src/Texmacs/: server.hpp  tm_buffer.hpp  tm_config.hpp  tm_data.hpp  tm_debug.hpp  tm_frame.hpp  tm_server.hpp  tm_window.hpp
src/Typeset/: boxes.hpp  env.hpp  formatter.hpp  typesetter.hpp
(+3083 files in other folders)
